# homeconnect-watcher

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
src/homeconnect_watcher/: api.py  cli.py  db.py  event.py  exceptions.py  read.py  trigger.py  views.py
src/homeconnect_watcher/client/: __init__.py  appliance.py  client.py
src/homeconnect_watcher/db/: __init__.py  client.py  utils.py  view.py
src/homeconnect_watcher/exporter/: __init__.py  base.py  file.py  postgres.py
src/homeconnect_watcher/sql/: 0_appliances.sql  1_active_events.sql  1_events.sql  2_active_sessions.sql  2_raw_events_active.sql  3_raw_events_with_session_id.sql  3_session_ids.sql  4_sessions.sql  5_events_by_type.sql  6_combined_events.sql
src/homeconnect_watcher/utils/: __init__.py  logging.py  metrics.py  retry.py  timeout.py
tests/: conftest.py  test_db.py  test_event.py
tests/client/: test_client.py  test_watch.py
tests/db/: test_client.py  test_views.py
tests/db/views/: conftest.py  test_view_appliances.py  test_view_events.py  test_view_session.py
tests/exporter/: test_file.py  test_postgres.py
tests/utils/: test_retry.py  test_timeout.py
